# S905_LinuxTV

./: CMakeLists.txt  README.md  main.cpp
avl_sdk/: avl_sdk.cmake
avl_sdk/inc/: AVL68XX_Porting.h  AVLDemod.h  user_defined_data_type.h
avl_sdk/src/: AVL68XX_Porting.cpp  AVLDemod.cpp  AVL_Demod_CommonInternal.cpp  AVL_Demod_Config.cpp  MxL608.cpp  user_defined_function.cpp
dmx/: Noovo_dmx.cmake
dmx/inc/: noovo_dmx.h  noovo_dvr.h
dmx/src/: noovo_dmx.c  noovo_dvr.c
encoder/: Aml_encoder.cmake  CMakeLists.txt  Makefile  test.cpp  transcoding.cpp
encoder/inc/: AML_HWEncoder.h  vpcodec_1_0.h
encoder/src/: AML_HWEncoder.cpp  enc_api.cpp  gxvenclib_fast.cpp  libvpcodec.cpp  parser.cpp  rate_control_gx_fast.cpp
include/libavutil/: ffversion.h
live/: Noovo_live.cmake
live/inc/: Adinsert.h  Audio.h  CtxWrapper.h  Datastock.hpp  Dvbtlive.h  Dvrlock.h  Stream.hpp  Transcoder.h  Video.h
live/src/: Adinsert.cpp  Audio.cpp  CtxWrapper.cpp  Dvbtlive.cpp  Dvrlock.cpp  Transcoder.cpp  Video.cpp
scan/: Noovo_scan.cmake
scan/inc/: AutoScan.h  Demuxer.h  DvbtTable.h  PATTable.h  PMTTable.h  SDTTable.h  ScanLog.h  noovo_iconv.h
scan/src/: AutoScan.cpp  Demuxer.cpp  PATTable.cpp  PMTTable.cpp  SDTTable.cpp  noovo_iconv.c  unicode.c
