cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
SET(CMAKE_C_COMPILER   /home/johnny/toolchain/gcc/linux-x86/aarch64/gcc-linaro-aarch64-linux-gnu-4.9/bin/aarch64-linux-gnu-gcc)
SET(CMAKE_CXX_COMPILER /home/johnny/toolchain/gcc/linux-x86/aarch64/gcc-linaro-aarch64-linux-gnu-4.9/bin/aarch64-linux-gnu-g++)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_C_STANDARD 11)
set(CMAKE_CXX_FLAGS " -DARM -Wall -Wno-deprecated")
project(DVR_TEST)
include(avl_sdk/avl_sdk.cmake)
include(dmx/Noovo_dmx.cmake)
include(scan/Noovo_scan.cmake)
include(live/Noovo_live.cmake)
include(encoder/Aml_encoder.cmake)
add_executable(DVR_TEST main.cpp)
link_directories(${CMAKE_SOURCE_DIR})
#直接放在build的資料夾
target_link_libraries(DVR_TEST AVL6682 pthread Noovo_scan Noovo_live) 